<resources>
    <string name="app_name">Phone Proxy</string>
    <string name="start_proxy">Start Proxy</string>
    <string name="stop_proxy">Stop Proxy</string>
    <string name="localhost">0.0.0.0:8888</string>
    <string name="stoped">Proxy has stopped!</string>
    <string name="wait_for_start">Wait for start</string>
    <!-- -    This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638    -->
    <string name="banner_ad_unit_id">ca-app-pub-9683268735381992/9310268686</string>
    <string name="clear_log">Clear Log</string>
    <string name="this_is_log">This is log</string>
    <string name="this_is_all_data_statistics">This is all data statistics</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://phoneproxy.tools.yunfeng.com\",\n  }\n}]</string>
    <string name="copy_to_clipboard">IP address have been copied</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sidebar_menu_remote_manager">Remote Manager</string>
    <string name="sidebar_menu_proxy">Proxy</string>
    <string name="sidebar_menu_title_netwrok">NetWork</string>
    <string name="channel_name">proxy status</string>
    <string name="channel_description">notification for proxy status</string>
    <string name="settings_proxy_port">set proxy port, default: 8888</string>
    <string name="settings_enable_skins">set enable dynamic skins</string>
    <string name="ftp_btn_login">登录</string>
    <string name="ftp_tv_password">密码</string>
    <string name="ftp_tv_username">账号</string>
    <string name="ftp_tv_ip">ip地址</string>
    <string name="ftp_tv_port">端口</string>
    <string name="ftp_btn_choose">选择文件</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="todo">TODO</string>
    <string name="ftp_btn_upload">上传</string>
    <string name="ftp_btn_disconnect">退出</string>
    <string name="selected_files_list">已选择文件</string>
    <string name="current_dir_list">当前服务器目录</string>
    <string name="ftp_btn_return">返回上一级</string>
</resources>
