<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ftp_login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_tv_username" />

            <EditText
                android:id="@+id/ftp_et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_name"
                android:inputType="text"
                android:text="heijin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_tv_password" />

            <EditText
                android:id="@+id/ftp_et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_name"
                android:inputType="text"
                android:text="TF/ZWI@DUA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_tv_ip" />

            <EditText
                android:id="@+id/ftp_et_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_name"
                android:inputType="text"
                android:text="qcftp.mysnail.com" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_tv_port" />

            <EditText
                android:id="@+id/ftp_et_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_name"
                android:inputType="text"
                android:text="21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/ftp_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ftp_btn_login" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/server_dir_panel"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/SubHeaderText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_white_gradient"
            android:text="@string/current_dir_list" />

        <ListView
            android:id="@+id/current_dir_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/ftp_btn_return"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftp_btn_return" />

        <Button
            android:id="@+id/ftp_btn_choose"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftp_btn_choose" />

        <Button
            android:id="@+id/ftp_btn_upload"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftp_btn_upload" />

        <Button
            android:id="@+id/ftp_btn_disconnect"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ftp_btn_disconnect" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            style="@style/SubHeaderText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_white_gradient"
            android:text="@string/selected_files_list" />

        <ListView
            android:id="@+id/selected_files_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />
    </LinearLayout>
</LinearLayout>